// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Action cell component > renders an action correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1ex1afd-MuiTableCell-root"
  >
    <p>
      Rendered an action using test!
    </p>
  </div>
</DocumentFragment>
`;

exports[`Action cell component > renders no actions correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1ex1afd-MuiTableCell-root"
  />
</DocumentFragment>
`;
